# ember

./: .gitignore  README.md  build.py  driver.py  pyproject.toml
benchmark/: benchmark.py  benchmark_notebook.ipynb  fyp results.xlsx  tables.py  temp.py  visualiser.ipynb  visualiser.py
benchmark/checkpoint/: faulty1_bte_1.pickle  faulty1_bte_10.pickle  faulty1_bte_11.pickle  faulty1_bte_2.pickle  faulty1_bte_3.pickle  faulty1_bte_4.pickle  faulty1_bte_5.pickle  faulty1_bte_6.pickle  faulty1_bte_7.pickle  faulty1_bte_8.pickle  faulty1_bte_9.pickle  faulty1_mm_1.pickle  faulty1_mm_10.pickle  faulty1_mm_11.pickle  faulty1_mm_2.pickle  faulty1_mm_3.pickle  faulty1_mm_4.pickle  faulty1_mm_5.pickle  faulty1_mm_6.pickle  faulty1_mm_7.pickle  faulty1_mm_8.pickle  faulty1_mm_9.pickle  faulty1_qte_1.pickle  faulty1_qte_2.pickle  faulty1_qte_3.pickle  faulty1_qte_4.pickle  faulty1_qte_5.pickle  faulty1_qte_6.pickle  faulty1_qte_7.pickle  faulty1_qte_8.pickle  faulty2_bte_1.pickle  faulty2_bte_10.pickle  faulty2_bte_11.pickle  faulty2_bte_2.pickle  faulty2_bte_3.pickle  faulty2_bte_4.pickle  faulty2_bte_5.pickle  faulty2_bte_6.pickle  faulty2_bte_7.pickle  faulty2_bte_8.pickle  (+51 more)
benchmark/checkpoint2/: faulty1_bte_1.pickle  faulty1_bte_10.pickle  faulty1_bte_11.pickle  faulty1_bte_2.pickle  (+62 more)
diagrams.ipynb/: embeddings.ipynb
ember.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pssa/: annealer.py  context.py  driver.py  graph.py  initializer.py  main.py  neighbour.py  scrap.py  types.py
template/: BTE.py  BTE2.py  bipartite.py  bipartite_cvxpy.py  bipartite_missing_qubits.py  driver.py  preprocessing.py  scrap.py  util.py
visualization/: charts.ipynb  diagrams.ipynb  plots.ipynb
(+78 files in other folders)
