[tool.poetry]
name = "ember"
version = "0.1.0"
description = "Heuristic algorithms to minor embed QUBO graphs for quantum annealing"
authors = ["Tony Liu <ipwnu777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dwave-networkx = "^0.8.6"
matplotlib = "^3.2.1"
dwave-system = "^0.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
