[tool.poetry]
name = "ember"
version = "0.1.0"
description = "Heuristic algorithms to minor embed QUBO graphs for quantum annealing"
authors = ["Tony Liu <ipwnu777@gmail.com>"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.7"
dwave-networkx = "^0.8.6"
matplotlib = "^3.2.1"
dwave-system = "^0.9.5"
ortools = "^7.8.7959"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
minorminer = "^0.1.9"
pybind11 = "^2.5.0" # Workaround: https://github.com/python-poetry/poetry/issues/2789

[build-system]
requires = ["poetry-core>=1.0.0a9", "setuptools", "wheel", "pybind11"]
build-backend = "poetry.core.masonry.api"

